tests/rosetta/out/Zig/break-oo-privacy.error
zig build error: exit status 1
/tmp/TestMochiZigGoldenbreak-oo-privacy1532881366/001/prog.zig:9:19: error: expected 3 argument(s), found 2
/tmp/zig-0.12.0/lib/std/mem.zig:3148:5: note: function declared here
/tmp/TestMochiZigGoldenbreak-oo-privacy1532881366/001/prog.zig:30:12: error: expected type 'prog.Foobar', found '*prog.Foobar'
/tmp/TestMochiZigGoldenbreak-oo-privacy1532881366/001/prog.zig:12:16: note: struct declared here
/tmp/TestMochiZigGoldenbreak-oo-privacy1532881366/001/prog.zig:22:33: note: function return type declared here
